syntax = "proto3";

package note;

import "definitions/validate/Validate.proto";

option go_package = "github.com/yb2020/odoc/proto/gen/go/note";

// @api_path: /api/note/paperNote/summary/getByNoteId
// @method: POST
// @content-type: application/json
// @summary: 根据笔记ID获取笔记摘要
message GetNoteSummaryByNoteIdRequest {
  string noteId = 1 [(validate.rules).string = {min_len: 1}];
}

message GetNoteSummaryByNoteIdResponse {
  string content = 1;
  uint64 modifyDate = 2;
  string docName = 3;
}

/**
 * @api_path: /api/note/paperNote/summary/saveOrUpdate
 * @method: POST
 * @content-type: application/json
 * @summary: 添加/更新总结
 */
message SaveOrUpdateSummaryReq {
  string noteId = 1;
  string content = 2;
}
